# brs

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  TODO.md  justfile
crates/bms/: Cargo.toml
crates/bms/benches/: decode_bench.rs
crates/bms/fuzz/: Cargo.toml
crates/bms/fuzz/fuzz_targets/: fuzz_bms.rs  fuzz_bmson.rs  fuzz_osu.rs
crates/bms/src/: lib.rs
crates/bms/src/model/: bms_generator.rs  bms_model.rs  bms_model_utils.rs  bmson_decoder.rs  chart_decoder.rs  chart_information.rs  event_lane.rs  judge_note.rs  lane.rs  osu_decoder.rs  section.rs  time_line.rs
crates/bms/src/table/: bms_table_manager.rs  course.rs  difficulty_table.rs  difficulty_table_element.rs  difficulty_table_parser.rs  event_table.rs  event_table_element.rs
crates/bms/tests/: osu_decoder.rs  random_nesting.rs  smoke_test.rs  unwrap_robustness.rs
crates/rubato-db/: Cargo.toml
crates/rubato-db/src/: lib.rs  score_data_log_database_accessor.rs  score_log_database_accessor.rs
crates/rubato-db/src/play_data_accessor/: core.rs  mod.rs  model_course.rs
crates/rubato-db/src/score_database_accessor/: mod.rs  tests.rs
crates/rubato-e2e/: Cargo.toml
crates/rubato-e2e/src/: harness.rs  lib.rs  scenario.rs
crates/rubato-e2e/tests/: behavioral.rs
crates/rubato-e2e/tests/behavioral/: audio_integration.rs  audio_sequences.rs  concurrency_smoke.rs  edge_cases.rs  full_flow.rs  gameplay_autoplay.rs  gameplay_manual_input.rs  gauge_types.rs  handoff_verification.rs  render_correctness.rs  score_handoff.rs  score_pipeline.rs  state_lifecycle.rs  transition_paths.rs
crates/rubato-input/: Cargo.toml
crates/rubato-input/src/: bm_controller_input_processor.rs  bms_player_input_processor.rs  gdx_compat.rs  input_snapshot.rs  key_input_log.rs  keyboard_input_processor.rs  lib.rs  midi_input_processor.rs  mouse_scratch_input.rs  stubs.rs  winit_input_bridge.rs
crates/rubato-input/src/controller/: lwjgl3_controller.rs  lwjgl3_controller_manager.rs
crates/rubato-skin/: Cargo.toml
crates/rubato-skin/src/: bga_types.rs  bitmap_font_batch_loader.rs  bitmap_font_cache.rs  bms_player_rule.rs  draw_command.rs  groove_gauge.rs  ir_config.rs  judge_algorithm.rs  lib.rs  main_state.rs  mine_note_modifier.rs  pattern_modify_log.rs  player_config.rs  pomyu_chara_loader.rs  reexports.rs  score_data_property.rs  select_bar_data.rs  skin.rs  skin_bpm_graph.rs  skin_data_converter.rs  skin_drawable.rs  skin_graph.rs  skin_image.rs  skin_note_distribution_graph.rs  skin_object.rs  skin_property.rs  skin_property_mapper.rs  skin_resolution.rs  skin_text.rs  skin_text_bitmap.rs  skin_text_font.rs  skin_text_image.rs  skin_timer.rs  skin_timing_visualizer.rs  snapshot_main_state.rs  song_information.rs  state_event.rs  stubs.rs  test_helpers.rs  value_id.rs
crates/rubato-skin/src/core/: custom_event.rs  custom_timer.rs  float_formatter.rs  skin_float.rs  skin_property_mapper.rs  stretch_type.rs
crates/rubato-skin/src/graphs/: skin_bpm_graph.rs  skin_graph.rs  skin_hit_error_visualizer.rs  skin_note_distribution_graph.rs  skin_timing_distribution_graph.rs  skin_timing_visualizer.rs
crates/rubato-skin/src/json/: json_play_skin_object_loader.rs  json_select_skin_object_loader.rs  json_skin.rs  json_skin_loader.rs  json_skin_object_loader.rs
crates/rubato-skin/src/loaders/: bitmap_font_batch_loader.rs  bitmap_font_cache.rs  pomyu_chara_loader.rs  skin_loader.rs
crates/rubato-skin/src/lr2/: lr2_course_result_skin_loader.rs  lr2_font_loader.rs  lr2_play_skin_loader.rs  lr2_result_skin_loader.rs  lr2_select_skin_loader.rs  lr2_skin_csv_loader.rs  lr2_skin_header_loader.rs  lr2_skin_loader.rs  lr2_skin_select_skin_loader.rs
crates/rubato-skin/src/lua/: event_utility.rs  lua_skin_loader.rs  main_state_accessor.rs  (+2 more)
crates/rubato-skin/tests/: json_parser_compat.rs  texture_wiring.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bms_decoder.rs  fuzz_json_skin_config.rs  fuzz_lr2_csv_loader.rs  fuzz_ms_adpcm_decoder.rs
lr2oraja-rust/crates/ast-compare/: Cargo.toml
lr2oraja-rust/crates/beatoraja-audio/: Cargo.toml
lr2oraja-rust/crates/beatoraja-input/: Cargo.toml
lr2oraja-rust/crates/bms-audio/: Cargo.toml
lr2oraja-rust/crates/bms-input/: Cargo.toml
lr2oraja-rust/crates/bms-model/: Cargo.toml
lr2oraja-rust/crates/bms-render/: Cargo.toml
lr2oraja-rust/crates/bms-replay/: Cargo.toml
lr2oraja-rust/golden-master/: Cargo.toml
lr2oraja-rust/golden-master/fixtures/: 14key_dp.json  9key_pms.json  audio_fixtures.json  autoplay_log.json  bga_timeline.json  bmson_mine_invisible.bmson.json  bpm_change.bms.json  bpm_extreme.bms.json  channel_extended.bms.json  course_data.json  database_song_data.json  encoding_utf8.json  judge_manager.json  ln_bpm_cross.bms.json  ln_overlap.bms.json  longnote_types.json  lr2_ghost_decode.json  lr2_lane_order.json  multi_stop_rapid.bms.json  pattern_lane_shuffle.json  pattern_modifier_detail.json  pattern_playable_random.json  random_nested_if.bms.json  real_bms_summary.json  replay_e2e.json  score_data_property.json  scratch_bss.json  skin_ecfn_select_snapshot.json  skin_lua_decide_snapshot.json  song_information.json  stop_sequence.bms.json  timing_extreme.bms.json
lr2oraja-rust/golden-master/src/: autoplay_fixtures.rs  database_fixtures.rs  e2e_helpers.rs  judge_fixtures.rs  lib.rs  pattern_fixtures.rs  render_snapshot.rs  rule_fixtures.rs  skin_fixtures.rs  song_information_fixtures.rs  state_provider.rs
lr2oraja-rust/golden-master/tests/: compare_audio.rs  compare_autoplay.rs  compare_bga_timeline.rs  compare_config.rs  compare_course_data.rs  compare_database.rs  compare_fixtures.rs  compare_judge.rs  compare_judge_manager.rs  compare_pattern.rs  compare_pattern_modifiers.rs  compare_render_snapshot.rs  compare_replay.rs  compare_replay_e2e.rs  compare_rule.rs  compare_score_data_property.rs  compare_screenshots.rs  compare_skin.rs  compare_song_information.rs  course_e2e.rs  e2e_edge_cases.rs  e2e_judge.rs  full_pipeline_integration.rs  real_bms_integration.rs  replay_roundtrip_e2e.rs  skin_ecfn_integration.rs
(+2330 files in other folders)
