[package]
name = "brs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "BMS rhythm game player"
license = "MIT"

[dependencies]
bms-rs = "0.10"
kira = { version = "0.10", features = ["cpal", "mp3", "ogg", "wav", "flac"] }
macroquad = "0.4"
gilrs = "0.11"
anyhow = "1.0"
thiserror = "2.0"
fraction = "0.15"
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"
rand = "0.9"
sha2 = "0.10"
md-5 = "0.10"
hmac = "0.12"
hex = "0.4"
encoding_rs = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
ffmpeg-next = "8"
image = "0.25"
rayon = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.24.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
