[package]
name = "brs"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2"
anyhow = "1"
base64 = "0.22"
bytemuck = { version = "1", features = ["derive"] }
bms-rs = "0.10"
clap = { version = "4", features = ["derive", "env"] }
crc32fast = "1"
encoding_rs = "0.8"
flate2 = "1"
gilrs = "0.11"
image = "0.25"
kira = "0.9"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
num-traits = "0.2"
rand = "0.9.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "24"
winit = "0.30"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "play_benchmark"
harness = false

[[bench]]
name = "render_benchmark"
harness = false
