[package]
name = "rubato-db"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
bms = { workspace = true }
rubato-types = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# Database
rusqlite = { workspace = true }

# Crypto (for score hash)
sha2 = { workspace = true }

# Date/Time
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rubato-types = { workspace = true, features = ["test-support"] }
