[package]
name = "rubato-e2e"
version.workspace = true
edition.workspace = true

[dependencies]
# Internal crates
rubato = { workspace = true, features = ["test-support"] }
rubato-audio = { workspace = true }
rubato-skin = { workspace = true }
rubato-input = { workspace = true }
rubato-render = { workspace = true }
bms = { workspace = true }

# Error handling
anyhow = { workspace = true }
