[package]
name = "rubato-input"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
midir.workspace = true
gilrs.workspace = true
bms.workspace = true
rubato-skin.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true
