[package]
name = "rubato-skin"
version.workspace = true
edition.workspace = true

[dependencies]
bms.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
encoding_rs.workspace = true
regex.workspace = true
chrono.workspace = true
rubato-render.workspace = true
mlua.workspace = true
ffmpeg-next = { workspace = true, optional = true }

# Absorbed from rubato-types
sha2.workspace = true
base64.workspace = true
flate2.workspace = true
aes.workspace = true
cbc.workspace = true

[features]
ffmpeg = ["dep:ffmpeg-next"]
test-support = []

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "skin_loader_bench"
harness = false
