[package]
name = "golden-master"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model.workspace = true
bms-rule.workspace = true
bms-pattern.workspace = true
bms-replay.workspace = true
bms-database.workspace = true
bms-config.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
