[package]
name = "ast-compare"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ast-compare"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
tree-sitter = "0.24"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
walkdir = "2"
heck = "0.5"
colored = "2"
