[package]
name = "beatoraja-audio"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
bms-model.workspace = true
beatoraja-common.workspace = true
beatoraja-types.workspace = true

lewton = { workspace = true }
symphonia = { workspace = true }
kira = { workspace = true }
ebur128 = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
