[package]
name = "beatoraja-input"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
midir.workspace = true
bms-model.workspace = true
beatoraja-controller.workspace = true
beatoraja-types.workspace = true

[dev-dependencies]
tempfile.workspace = true
