[package]
name = "bms-audio"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model.workspace = true
anyhow.workspace = true
kira.workspace = true
hound.workspace = true
lewton.workspace = true
claxon.workspace = true
minimp3.workspace = true
ebur128.workspace = true
tracing.workspace = true
