[package]
name = "bms-input"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
gilrs.workspace = true
midir.workspace = true
serde.workspace = true
bms-config = { path = "../bms-config" }
bms-replay = { path = "../bms-replay" }
bms-model = { path = "../bms-model" }
