[package]
name = "bms-model"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
encoding_rs.workspace = true
md5.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "parse_bench"
harness = false
