[package]
name = "bms-render"
version.workspace = true
edition.workspace = true

[dependencies]
bms-skin.workspace = true
anyhow.workspace = true
bevy.workspace = true
image.workspace = true

[dev-dependencies]
bms-config = { workspace = true }
image-compare = { workspace = true }
tempfile = { workspace = true }
