[package]
name = "bms-replay"
version.workspace = true
edition.workspace = true

[dependencies]
bms-model.workspace = true
bms-config.workspace = true
bms-pattern.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
flate2.workspace = true

[dev-dependencies]
tempfile.workspace = true
